--- a/src/properties.css
+++ b/src/properties.css
@@ -10,6 +10,11 @@ h1
 	color: indianred;
 }
 
+h2
+{
+	color: indianred;
+}
+
 p
 {
 	color: white;
@@ -18,6 +23,16 @@ p
 li
 {
 	color: white;
+}
+
+form
+{
+	color: white;
+}
+
+input
+{
+	color: 
 }
 
 a:link
